# cryoem-map-reliability

./: .gitignore  CITATION.cff  DECISIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
cohort/: conformation_pair_domains.json  expansion_downloads.json  manifest.csv  publication_downloads.json
cryoem_mrc/: __init__.py  __main__.py  analysis.py  cohort_emdb.py  conformation_pair.py  feature_ml.py  figure_cleanup.py  half_map_repro.py  hessian.py  incremental_prediction.py  io.py  local_fsc.py  local_resolution.py  local_resolution_io.py  local_stats.py  map_grid.py  mask_bbox.py  mechanics.py  metric_comparison.py  model_building_export.py  model_map.py  multiscale.py  pipeline.py  placement_decoupling.py  placement_utility.py  qscore_validation.py  reliability.py  repo_paths.py  rigidity.py  structure_validation.py  thesis_figures.py  visualize.py
figures/: v_vs_locres.py
pdb/: 7a4m.cif  7l2i.cif  7l2j.cif  8bk7.cif  8tze.cif  9jmb.cif  9mqm.cif  9mt7.cif  9n5j.cif  9nhz.cif
scripts/: download_cohort_expansion.py  export_figure_data.py  fscq_cluster.sbatch  prune_retired_figures.py  rerun_all_figures.py  run_analysis.py  run_blocres_local_resolution.py  run_blocres_preview_figures.py  run_clpb_placement_supplement.py  run_cohort_bfactor_horse_race.py  run_cohort_cross_metric_figure.py  run_cohort_model_placement_audit.py  run_cohort_pipeline.py  run_cohort_summary_figures.py  run_extended_feature_validation.py  run_fscq_validation.py  run_lh_map_reliability_export.py  run_lh_vs_b_and_fsc.py  run_local_fsc.py  run_metric_comparison_export.py  (+14 more)
(+22 files in other folders)
