[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoem-mrc-pipeline"
version = "0.1.0"
description = "Cryo-EM MRC density feature extraction"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "mrcfile>=1.4",
    "matplotlib>=3.7",
    "gemmi>=0.6",
]

[tool.setuptools.packages.find]
include = ["cryoem_mrc*"]
