[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoem-halfmap-qc"
version = "0.2.0"
description = "Local map reliability from cryo-EM density and half-maps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "mrcfile>=1.4",
    "matplotlib>=3.7",
    "gemmi>=0.6",
    "seaborn>=0.13",
    "pandas>=2.0",
    "biopython>=1.80",
    "tqdm>=4.60",
]

[project.optional-dependencies]
qscore = [
    "qscore @ git+https://github.com/3dem/qscore.git",
]

[tool.setuptools.packages.find]
include = ["cryoem_mrc*", "style*"]

[project.urls]
Repository = "https://github.com/sarthaktexas/cryoem-halfmap-qc"
Zenodo = "https://doi.org/10.5281/zenodo.20618527"
